# JobAgent

./: .env.example  .gitignore  PRODUCT.md  README.md  benchmark_llm_apis.py  model-routing.json  up.sh
Agents/legato/: .gitignore  README.md  TECH_SELECTION.md  pyproject.toml  requirements.paddleocr.optional.txt
Agents/legato/docs/: ARCHITECTURE.md
Agents/legato/fixtures/: resume.expected.json  resume.md  transcript.expected.json  transcript.md
Agents/legato/legato/: __init__.py  chat_workflow_formatter.py  cleaning.py  cli.py  formatter.py  markitdown_frontend.py  model_routing.py  ocr_paddle.py  pdf_text_frontend.py  pipeline.py  resume_workflow_formatter.py  schemas.py  transcript_cleaning.py
Agents/legato/prompts/: transcript_course_grade_ocr.md
Agents/legato/scripts/: acceptance.sh  benchmark_transcript_cleaning.py  install_dev.py  install_dev_offline.sh  install_markitdown_offline.sh  install_paddleocr_optional.sh
Agents/legato/tests/: chat_workflow_formatter_test.py  cleaning_test.py  cli_test.py  formatter_test.py  ocr_paddle_test.py  pdf_text_frontend_test.py  resume_workflow_formatter_test.py  test_acceptance.py  transcript_cleaning_test.py
Agents/legato/workflows/: __init__.py
Agents/legato/workflows/chat/: README.md  __init__.py  schema.json  workflow.py
Agents/legato/workflows/chat/prompts/: answer.md  common.md
Agents/legato/workflows/resume/: README.md  SCORING_RUBRIC.md  __init__.py  schema.json  workflow.py
Agents/legato/workflows/transcript/: DEEPSEEK_OCR_PROMPT_EVAL.md  PADDLEOCR_EVAL.md  PADDLEOCR_VL_SILICONFLOW_EVAL.md  README.md
(+62 files in other folders)
